Added Cornfield & Randomized Directions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rocket Patrol</title>
     <style>
         body {
-            background-color: thistle;
+            background-color: tan;
         }
     </style>
 </head>
