--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <script src="library/phaser.js"></script>
     <script src="src/prefabs/Rocket.js"></script>
-    <script src="src/prefabs/Spaceship.js"></script>
-    <script src="src/prefabs/SmallSpaceship.js"></script>
+    <script src="src/prefabs/Bird.js"></script>
+    <script src="src/prefabs/UFO.js"></script>
+    <script src="src/prefabs/Tomato.js"></script>
     <script src="src/scenes/Menu.js"></script>
     <script src="src/scenes/Play.js"></script>
     <script src="src/main.js"></script>
