Everything but farmer & indicator lines are work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <script src="library/phaser.js"></script>
-    <script src="src/prefabs/Rocket.js"></script>
+    <script src="src/prefabs/Farmer.js"></script>
+    <script src="src/prefabs/Bullet.js"></script>
     <script src="src/prefabs/Bird.js"></script>
     <script src="src/prefabs/UFO.js"></script>
     <script src="src/prefabs/Tomato.js"></script>
